--- a/Digital_shop/templates/Training.html
+++ b/Digital_shop/templates/Training.html
@@ -19,7 +19,7 @@
       background-color: white; /* Keeping the row background the same */
     }
     .small-text {
-      font-size: xx-small;  /* Make the text very tiny */
+      font-size:small;  /* Make the text very tiny */
       padding: 5px 10px;    /* Adjust padding to make it compact */
     }
     @media (max-width: 800px) {
