--- a/Digital_shop/templates/index.html
+++ b/Digital_shop/templates/index.html
@@ -238,7 +238,7 @@
         
                     <!-- Buttons and Payment Form -->
                     <div class="mt-4">
-                      <button class="btn btn-warning custom-hover btn-sm mb-2" id="add-to-cart-{{ book.id }}">
+                      <button class="btn btn-warning custom-hover btn-sm mb-2 add-to-cart-btn" id="add-to-cart-{{ book.id }}">
                         <i class="fa-solid fa-plus fa-sm"></i>
                         <i class="fas fa-shopping-cart"></i> Add to Cart
                       </button>
@@ -417,7 +417,7 @@
 
             <!-- Buttons and Payment Form -->
             <div class="mt-4">
-              <button class="btn btn-warning custom-hover btn-sm mb-2" id="add-to-cart-{{ book.id }}">
+              <button class="btn btn-warning custom-hover btn-sm mb-2 add-to-cart-btn" id="add-to-cart-{{ book.id }}">
                 <i class="fa-solid fa-plus fa-sm"></i>
                 <i class="fas fa-shopping-cart"></i> Add to Cart
               </button>
