--- a/Digital_shop/templates/sections/footer.html
+++ b/Digital_shop/templates/sections/footer.html
@@ -2,7 +2,7 @@
 
 <style>
   footer {
-    font-size: 0.875rem; /* Small font size for all footer text */
+    font-size:small; /* Small font size for all footer text */
   }
   footer a {
     font-size: inherit; /* Use inherited font size for links */
