--- a/Digital_shop/templates/membership_success.html
+++ b/Digital_shop/templates/membership_success.html
@@ -45,7 +45,7 @@
         <div class="alert alert-success mt-5 pt-5" role="alert">
             <i class="fas fa-check-circle fa-3x mb-3 text-success"></i>
             <h2 class="alert-heading">Purchase Successful!</h2>
-            <p class="lead">Thank you for purchasing the <strong>{{ course_name }}</strong> - <strong>{{ level }}</strong> membership!</p>
+            <p class="lead">Thank you for purchasing the <strong>{{ course_name }}</strong> - <strong>{{ level }}</strong></p>
             <hr>
         </div>
 
