--- a/Digital_shop/templates/pay_master.html
+++ b/Digital_shop/templates/pay_master.html
@@ -91,7 +91,7 @@
     {% if error_message %}
     Swal.fire({
         icon: 'error',
-        title: 'Error',
+        title: '',
         text: '{{ error_message }}',
         confirmButtonText: 'Ok',
         customClass: {
