--- a/Digital_shop/templates/dashboard/index.html
+++ b/Digital_shop/templates/dashboard/index.html
@@ -64,33 +64,9 @@
                   </div>
                   <span class="profile-username">
                     <span class="op-7 text-light">Hi,</span>
-                    <span class="fw-bold text-light">Hizrian</span>
+                    <span class="fw-bold text-light">{{ request.user.username }}</span>
                   </span>
                 </a>
-
-
-
-
-                <ul class="dropdown-menu dropdown-user animated fadeIn">
-                  <div class="dropdown-user-scroll scrollbar-outer">
-                    <li>
-                      <div class="user-box">
-                        <div class="avatar-lg">
-                          <img src="{% static 'img/profile.jpg' %}" alt="image profile" class="avatar-img rounded" />
-                        </div>
-                        <div class="u-text">
-                          <h4>Hizrian</h4>
-                          <p class="text-muted">hello@example.com</p>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">My Profile</a>
-                      <a class="dropdown-item" href="#">Logout</a>
-                    </li>
-                  </div>
-                </ul> 
               </li>
             </ul>
           </div>
@@ -116,40 +92,29 @@
               </div>
             </div>
             <div class="container-fluid">
-              <p class="text-start mb-4">Recently Accessed Courses</p>
-              <div class="row justify-content-center">
-                  <!-- Card 1 -->
-                  <div class="col-md-4 col-sm-6 mb-3">
-                      <div class="card position-relative">
-                          <img src="{% static 'img/online-education-concept-icon_24877-3779.jpg' %}" class="card-img" alt="Course 1">
-                          <div class="card-overlay">
-                              <p class="card-text">A brief description of the course content goes here.</p>
-                              <a href="#" class="btn btn-light btn-sm">View Course</a>
+              <h5 class="text-start mb-4">Recent Courses</h5>
+              {% if user_memberships %}
+                  <div class="row justify-content-center">
+                      {% for membership in user_memberships %}
+                          <!-- Card -->
+                          <div class="col-md-4 col-sm-6 mb-3">
+                              <div class="card position-relative">
+                                  <img src="{% static 'img/online-education-concept-icon_24877-3779.jpg' %}" 
+                                       class="card-img" alt="{{ membership.membership }}">
+                                  <div class="card-overlay">
+                                      <p class="card-text">{{ membership.membership }}</p>
+                                      <p class="card-text"><strong>Level:</strong> {{ membership.level }}</p>
+                                      <a href="#" class="btn btn-light btn-sm">View Course</a>
+                                  </div>
+                              </div>
                           </div>
-                      </div>
+                      {% endfor %}
                   </div>
-                  <!-- Card 2 -->
-                  <div class="col-md-4 col-sm-6 mb-3">
-                      <div class="card position-relative">
-                          <img src="{% static 'img/online-education-concept-icon_24877-3779.jpg' %}" class="card-img" alt="Course 2">
-                          <div class="card-overlay">
-                              <p class="card-text">A brief description of the course content goes here.</p>
-                              <a href="#" class="btn btn-light btn-sm">View Course</a>
-                          </div>
-                      </div>
-                  </div>
-                  <!-- Card 3 -->
-                  <div class="col-md-4 col-sm-6 mb-3">
-                      <div class="card position-relative">
-                          <img src="{% static 'img/online-education-concept-icon_24877-3779.jpg' %}" class="card-img" alt="Course 3">
-                          <div class="card-overlay">
-                              <p class="card-text">A brief description of the course content goes here.</p>
-                              <a href="#" class="btn btn-light btn-sm">View Course</a>
-                          </div>
-                      </div>
-                  </div>
-              </div>
+              {% else %}
+                  <p class="text-center">No recent courses found.</p>
+              {% endif %}
           </div>
+          
           <div class="container bg-white text-dark py-3">
             <p class="text-start mb-4 fs-5 fw-bold">Course Overview</p>
         
@@ -203,7 +168,7 @@
         <div class="container bg-white py-3 text-dark mt-5 pt-2">
           <p class="text-start mb-4 fs-5 fw-bold">Course Analytics</p>
       
-          <div class="row g-4">
+          <div class=" row g-4">
               <!-- Highest Score -->
               <div class="col-lg-4 col-md-6">
                   <div class="analytics-card p-3 border rounded">
@@ -227,6 +192,7 @@
                       <h5 class="text-primary">0</h5>
                   </div>
               </div>
+
            </div>
           </div>
       
