--- a/Digital_shop/templates/sections/nav.html
+++ b/Digital_shop/templates/sections/nav.html
@@ -277,10 +277,15 @@
           <li class="nav-item mx-3 dropdown">
             <a class="nav-link text-white dropdown-toggle link-underline {% if request.path == '/training' or request.path == '/library' %}active{% endif %}" href="#" id="userLinksDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">My Account <i class="bi bi-chevron-down ms-2"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userLinksDropdown">
+              {% if has_purchased_membership %}
               <li>
-                <!--{% url 'training' %}-->
+                  <a class="text-dark account-dropdown-item" href="{% url 'dashboard' %}">Training Dashboard</a>
+              </li>
+           {% else %} 
+              <li>
                 <a class="text-dark account-dropdown-item" href="{% url 'training' %}">Masterclass Courses</a>
               </li>
+              {% endif %}
               <li>
                 <a class="text-dark account-dropdown-item" href="{% url 'library' %}">My Digital Library</a>
               </li>
