--- a/Digital_shop/templates/membership_success.html
+++ b/Digital_shop/templates/membership_success.html
@@ -42,7 +42,7 @@
 <body>
     <section class="container text-center my-5 mt-5 pt-5">
         <!-- Success Alert with Bootstrap 5 styling -->
-        <div class="alert alert-success mt-5 pt-5" role="alert">
+        <div class="alert  mt-5 pt-5" role="alert">
             <i class="fas fa-check-circle fa-3x mb-3 text-success"></i>
             <h2 class="alert-heading">Purchase Successful!</h2>
             <p class="lead">Thank you for purchasing the <strong>{{ course_name }}</strong> - <strong>{{ level }}</strong></p>
@@ -50,8 +50,8 @@
         </div>
 
         <!-- Home Redirect Button -->
-        <a href="{% url 'home' %}" class="btn btn-primary btn-sm">
-            <i class="fas fa-home me-2"></i> Go to Home
+        <a href="{% url 'dashboard' %}" class="btn btn-primary btn-sm">
+            <i class="fas fa-home me-2"></i>Training Dashboard
         </a>
     </section>
 
